--- a/01HTML/07Table.html
+++ b/01HTML/07Table.html
@@ -17,6 +17,8 @@
     thead : 테이블의 헤더부분
     tbody : 테이블의 바디부분
     tfoot : 테이블의 푸터부분
+
+    하하하하~~~~
     caption : 테이블의 제목 -->
     
 <table border=1 width=500px height=300px align=center style="margin-top:200px;">
