--- a/01HTML/08IMG.html
+++ b/01HTML/08IMG.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-
+    <img src = "img/dog.jpg" width=100px height=200px>강아지<br>
+    <img src = "img/DOG2.jpg"><br>
+    <img src = "file:///C:/Web%20%EB%B0%B0%EC%8A%B9%EC%A3%BC/VSCODE/WEB-/01HTML/img/dog.jpg"><br>
+    <img src = "file:///C:/Web 배승주/DOG4.jpg"><br>
+    <img src = "https://www.motorgraph.com/news/photo/201905/22564_72789_5839.jpg"><br>
     
 </body>
 </html>
