올만에 저장

--- a/03CSS/08Table문제.html
+++ b/03CSS/08Table문제.html
@@ -42,6 +42,11 @@
             background-color: gray;
         } */
 
+        tr:hover
+        {
+            background-color: blueviolet;
+        }
+
         #id
         {
             outline: none;
